<resources>
    <string name="app_name">Social Media Tracker</string>
    <string name="button_addUser">Add New User</string>
    <string name="hint_userTitle">Username *</string>
    <string name="hint_userPassword">Password *</string>
    <string name="hint_userCaption">Caption</string>
    <string name="hint_userFollowers">Followers</string>
    <string name="hint_mediaName">Social Media *</string>
    <string name="menu_addUser">Add</string>
    <string name="menu_searchUser">Search</string>
    <string name="menu_cancelUser">Cancel</string>
    <string name="menu_deleteUser">Delete</string>
    <string name="fill_all_fields"> Please enter a username, password and the name of the app you would like to track </string>
    <string name="update_user"> Save Changes </string>
    <string name="button_addImage"> Add a Profile Picture </string>
    <string name="select_profile_image"> select your profile picture </string>
    <string name="button_photoLocation"> Photo Location</string>
    <string name="button_start">Start</string>
    <string name="splash_screen_heading">The Social Media Tracker App</string>
    <string name="dark_mode_switch"> Dark Mode</string>

    <string-array name="media_array">
        <item>Instagram</item>
        <item>Facebook</item>
        <item>Snapchat</item>
        <item>Twitter</item>
        <item>BeReal</item>
        <item>LinkedIn</item>
        <item>TikTok</item>
        <item>Youtube</item>
    </string-array>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_social_media_maps">Map of Photo Locations </string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="toggle_button">Active Now</string>

</resources>